--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
       <img src="assets/cat.png" />
       <input type="text" id="input-field" placeholder="Bread" />
       <button id="add-button">Add to cart</button>
+      <ul id="shopping-list"></ul>
     </div>
-    <script src="functions.js" type="module"></script>
+    <!-- <script src="functions.js" type="module"></script> -->
     <script src="index.js" type="module"></script>
   </body>
 </html>
