--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="index.css" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
   </head>
   <body>
     <div class="container">
@@ -17,7 +18,6 @@
       <button id="add-button">Add to cart</button>
       <ul id="shopping-list"></ul>
     </div>
-    <!-- <script src="functions.js" type="module"></script> -->
     <script src="index.js" type="module"></script>
   </body>
 </html>
